# hl-price-alerts

./: .gitignore  Cargo.toml  README.md  alerts.db
hyperliquid-rust-sdk/src/exchange/: exchange_client.rs
src/: alerts.rs  cron.rs  db.rs  lib.rs  main.rs  notification.rs
