[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["hyperliquid-rust-sdk"]

[dependencies]
env_logger = "0.11.8"
ethers = "2.0.14"
hyperliquid_rust_sdk = { path = "hyperliquid-rust-sdk" }
log = "0.4.27"
tokio = { version = "1.39.0", features = ["full"] }
alloy = "1.0.30"
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
teloxide = { version = "0.17.0", features = ["macros"] }
pretty_env_logger = "0.5.0"
rusqlite = { version = "0.37.0", features = ["chrono"] }
chrono = "0.4.41"
tokio-cron-scheduler = "0.9.1"
cron = "0.15.0"
cron-parser = "0.10.0"
